# isomiR-SEA

./: .gitignore  CMakeLists.txt  isomirsea-reference-manual.ipynb
apps/: CMakeLists.txt  core.h  input.h  iupac_map.h  main.cpp  mir_matched.h  mirna.h  options.h  output.h  prx_mirna.h  prxmir_matched.h  read_write_gff.h  seed_mirna.h  stopwatch.h  tag.h  tag_mirna.h
include/: CMakeLists.txt
io_files_test/tag/: ENCFF005EAG_ENCFF008VOH.collapsed.tab
